<resources>
    <string name="settings_more_title">More</string>
    <string name="settings_profile_norms">Profile &amp; norms</string>
    <string name="settings_region">Region</string>
    <string name="settings_label_region_us">United States</string>
    <string name="settings_label_region_canada">Canada</string>
    <string name="settings_label_region_other">Other</string>
    <string name="settings_calendar">Calendar</string>
    <string name="settings_label_calendar_usccb">USCCB</string>
    <string name="settings_label_calendar_traditional">Traditional 1962</string>
    <string name="settings_friday_mode">Friday mode</string>
    <string name="settings_label_friday_abstain">Abstain from meat</string>
    <string name="settings_label_friday_substitute">Substitute penance</string>
    <string name="settings_ascension_observance">Ascension observance</string>
    <string name="settings_label_ascension_thursday">Thursday</string>
    <string name="settings_label_ascension_sunday">Sunday transfer</string>
    <string name="settings_age_14">Age 14+ for abstinence</string>
    <string name="settings_age_18">Age 18+ for fasting</string>
    <string name="settings_medical_dispensation">Medical dispensation</string>
    <string name="settings_birth_year">Birth year</string>
    <string name="settings_accessibility_selected">Selected</string>
    <string name="settings_accessibility_not_selected">Not selected</string>
</resources>

